# ompi

config/: ompi_check_gds.m4
ompi/mca/common/ompio/: common_ompio.h  common_ompio_file_open.c  common_ompio_file_read.c  common_ompio_file_write.c
ompi/mca/fbtl/base/: base.h  fbtl_base_file_select.c
ompi/mca/fbtl/directio/: Makefile.am  fbtl_directio.c  fbtl_directio.h  fbtl_directio_component.c  fbtl_directio_ipreadv.c  fbtl_directio_ipwritev.c  fbtl_directio_preadv.c  fbtl_directio_pwritev.c
ompi/mca/fbtl/gds/: Makefile.am  configure.m4  fbtl_gds.c  fbtl_gds.h  fbtl_gds_component.c  fbtl_gds_ipreadv.c  fbtl_gds_ipwritev.c  fbtl_gds_preadv.c  fbtl_gds_pwritev.c
ompi/mca/fcoll/vulcan/: fcoll_vulcan.h  fcoll_vulcan_file_read_all.c  fcoll_vulcan_file_write_all.c
ompi/mca/fs/base/: fs_base_file_close.c
ompi/mca/fs/gds/: Makefile.am  configure.m4  fs_gds.c  fs_gds.h  fs_gds_component.c  fs_gds_file_close.c  fs_gds_file_open.c
ompi/mca/fs/lustre/: fs_lustre.h  fs_lustre_file_open.c
ompi/mca/fs/ufs/: fs_ufs.h  fs_ufs_component.c  fs_ufs_file_open.c
ompi/mca/io/ompio/: io_ompio.c  io_ompio.h  io_ompio_component.c
